# ideal-repo

./: README.md  pyproject.toml
docs/: commands.md  documentation.md
docs/diagrams/: workflow.md
project/src/: __main__.py  core.py
project/tests/: test_core.py
