[tool.poetry]
name = "project"
version = "0.1.0"
description = "CLI tool to perform addition of two floating point numbers"
authors = ["Vaasudevan Srinivasan <vaasuceg.96@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
geopandas = "^0.14.0"
rasterio = "^1.3.8.post2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
coverage = "^7.3.2"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "project.src.__main__:cli"
